<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CCS Mobile Thesis Archive</string>
    <string name="cmta">CCS Mobile Thesis Archive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="goal">Goal</string>
    <string name="title_activity_faqsfragment">FAQSFragment</string>
    <string name="action_search">Search..</string>
    <string name="title_activity_abstract_fragment">AbstractFragment</string>
    <string name="title_activity_abstracts">Abstracts</string>
    <string name="desc">Abstract</string>
    <string name="rating">Rating</string>
    <string name="rate">Rate this thesis</string>
    <string name="rateit">Rate this thesis!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comments</string>
    <string name="fname">FirstName</string>
    <string name="lname">Lastname</string>
    <string name="no">no</string>
    <string name="yes">Yes</string>
    <string name="rac">View Rating and Comments</string>
    <string name="flname">Full Name</string>
    <string name="zero">0.0</string>

    <color name="red">#ffff0000</color>
    <color name="green">#ff00ff00</color>

    <string name="title_activity_com_rate">ComRate</string>
    <string name="researcher">Researcher:</string>
    <string name="adviser">Adviser:</string>
    

</resources>