<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/username" />

        <EditText
            android:id="@+id/uname"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/password" />

        <EditText
            android:id="@+id/pword"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/fname" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/lname" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:inputType="text" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/signupa"
            android:layout_width="155dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/signup" />

        <Button
            android:id="@+id/can"
            android:layout_width="155dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>