<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="155dip"
            android:layout_height="wrap_content"
            android:onClick="onLogin"
            android:layout_marginBottom="10dip" />

        <Button
            android:id="@+id/signup"
            android:text="@string/signup"
            android:layout_width="155dip"
            android:layout_height="wrap_content"
            android:onClick="onSignup" 
            android:layout_marginBottom="10dip" />
    </LinearLayout>

</LinearLayout>