<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBarCustom"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/comment" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/comment"
        android:layout_below="@+id/comment"
        android:layout_marginBottom="10dip"
        android:text="@string/save" />

    <Button
        android:id="@+id/canbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/comment"
        android:layout_below="@+id/comment"
        android:layout_marginBottom="10dip"
        android:text="@string/cancel" />

    <RatingBar
        android:id="@+id/ratingBarCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:rating="0.0"
        android:stepSize="0.5" />

</RelativeLayout>