<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Abstracts" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/researcher"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/adviser"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/year"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip"
            android:padding="10dip"
            android:text="@string/desc"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/abs"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip"
            android:padding="10dip"
            android:text="@string/rating"
            android:textSize="17sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0.0"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_marginTop="13dip"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRate"
            android:text="@string/rateit" />
        
        <TextView
            android:id="@+id/rac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip"
            android:padding="10dip"
            android:text="@string/rac"
            android:textSize="17sp" />
        
        <ListView 
            android:id="@+id/lstview"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>